<resources>
    <string name="app_name">점심줄 놓지마</string>
    <string name="signup_comment">&lt;u>&lt;b>회원가입&lt;b>&lt;/u></string>
    <string name="address_placeholder">동명(읍, 면)으로 검색(ex. 신림동)</string>
    <string name="gps_search_btn_text">내 위치로 검색하기</string>
    <string name="set_addr_btn_text">이 위치로 지정하기</string>
    <string name="suggest_location_permission_grant">위치를 가져오기 위해서는 위치 권한이 필요합니다.</string>
    <string name="suggest_location_permission_grant_in_setting">위치 권한이 필요합니다. 확인을 누르면 설정 화면으로 이동합니다.</string>
    <string name="no_permission_msg">권한이 없어 해당 기능을 실행할 수 없습니다.</string>
    <string name="no_location_msg">위치를 알 수 없습니다.</string>
    <string name="home">홈</string>
    <string name="location_setting">위치설정</string>
    <string name="eat_history">식사기록</string>
    <string name="app_talk">점심줄토크</string>
    <string name="my_menu">내점심줄</string>
    <string name="signup">회원가입</string>
    <string name="visitHelper">점심줄 놓지마가 처음이신가요?</string>
    <string name="jibunAddr">지번주소</string>
    <string name="roadAddr">도로명주소</string>
    <string name="restaurant">식당</string>
    <string name="distance">거리</string>
    <string name="another_menu">다른 추천</string>
    <string name="choice">선택</string>
    <string name="day_menu_regist">데이메뉴 등록</string>
    <string name="menu_history">식사기록</string>
    <string name="score">불꽃점수</string>
    <string name="placeName">음식점</string>
    <string name="placeName_search_title">음식점 검색</string>
    <string name="food_category">음식종류</string>
    <string name="lunch_memo">먹방일지</string>
    <string name="cancel">취소</string>
    <string name="regist">등록</string>
    <string name="delete">삭제</string>
    <string name="dayMenuDate">%d년 %d월 %d일의 메뉴</string>
    <string name="input_place_name_hint">음식점 이름을 입력해주세요.</string>
    <string name="food_name">음식명</string>
    <string name="food_name_search_title">음식명 검색</string>
    <string name="input_food_name_hint">음식명을 입력해주세요</string>
    <string name="my_place_regist">음식점 등록하기</string>
    <string name="frequently_used_restaurants">자주 이용하는 음식점</string>
    <string name="permission_granted">권한 승인</string>
    <string name="ok">확인</string>
    <string name="suggest_image_upload_permission_grant_in_setting">카메라 및 파일 읽기/쓰기에 대한 권한이 필요합니다. 확인을 누르면 설정 화면으로 이동합니다.</string>
    <string name="suggest_image_upload_permission_grant">이미지 업로드 기능을 사용하기 위해서는 권한이 필요합니다.</string>
    <string name="suggest_camera_permission_grant">카메라 기능을 사용하기 위해서는 권한이 필요합니다.</string>
    <string name="suggest_file_permission_grant">파일에 접근하기 위해서는 권한이 필요합니다.</string>
    <string name="user_update_fail_msg">사용자 정보 업데이트에 실패했습니다.</string>
    <string name="filter_update_success">내 점심줄이 변경되었습니다.</string>
    <string name="filter_update_fail">내 점심줄 변경에 실패했습니다.</string>
    <string name="address_setting_title">지역설정</string>
    <string name="get_address_failure">주소정보를 가져오는데 실패했습니다.</string>
    <string name="address_direct_input_notify">주소 직접입력 기능을 이용해주세요.</string>
    <string name="daymenu_insert_success">데이메뉴 저장에 성공했습니다!</string>
</resources>